@@ -43,7 +43,7 @@ public class NavigationTreeModel implements javax.swing.tree.TreeModel,ch.ehi.um
     public static final String SORT_BY_NAME="SORT_BY_NAME";
     private String currentOrdering=SORT_BY_KIND_NAME;
 
-    private java.util.Vector treeModelListeners = new java.util.Vector();
+    private java.util.Vector<TreeModelListener> treeModelListeners = new java.util.Vector<TreeModelListener>();
     private Namespace rootElement;
     private boolean showOnlyPackages;
 
@@ -54,48 +54,29 @@ public class NavigationTreeModel implements javax.swing.tree.TreeModel,ch.ehi.um
 
     /** Invoked after a node (or a set of siblings) has changed in some way.
      */
-    protected void fireTreeNodesChanged(Element node){
-        int len = treeModelListeners.size();
-        TreeModelEvent e;
-        if(node instanceof UmlModel){
-          e = new TreeModelEvent(this,getTreePath(node));
-        }else{
-          e = new TreeModelEvent(this,getTreePath(getParent(node)));
-        }
-        for (int i = 0; i < len; i++) {
-            ((TreeModelListener)treeModelListeners.elementAt(i)).
-                    treeNodesChanged(e);
-        }
-    }
-
-    /** Invoked after nodes have been inserted into the tree.
-     */
-    protected void fireTreeNodesInserted(Element e){
-    }
-
-    /** Invoked after nodes have been removed from the tree.
-     */
-    protected void fireTreeNodesRemoved(Element element){
-/*      int len = treeModelListeners.size();
-        TreeModelEvent e = new TreeModelEvent(this, getTreePath(element)); //getTreePath(utility.findParent(node)));
-        
-        for (int i = 0; i < len; i++) {
-            if (e.getPath()[0] != null) {
-                ((TreeModelListener)treeModelListeners.elementAt(i)).treeNodesRemoved(e);
+    private void fireTreeNodesChanged(Element node){
+        final TreePath path = getTreePath(node);
+        if(path!=null) {
+            int len = treeModelListeners.size();
+            TreeModelEvent e=new TreeModelEvent(this,path);
+            for (int i = 0; i < len; i++) {
+                ((TreeModelListener)treeModelListeners.elementAt(i)).
+                        treeNodesChanged(e);
             }
         }
-*/
     }
+
 
     /** Invoked after the tree has drastically changed structure from a given node down.
      */
-    protected void fireTreeStructureChanged(Element node) {
-        int len = treeModelListeners.size();
-        TreeModelEvent e = new TreeModelEvent(this,
-                                              getTreePath(node));
-        for (int i = 0; i < len; i++) {
-            ((TreeModelListener)treeModelListeners.elementAt(i)).
-                    treeStructureChanged(e);
+    private void fireTreeStructureChanged(Element node) {
+        final TreePath path = getTreePath(node);
+        if (path != null) {
+            int len = treeModelListeners.size();
+            TreeModelEvent e = new TreeModelEvent(this, path);
+            for (int i = 0; i < len; i++) {
+                ((TreeModelListener) treeModelListeners.elementAt(i)).treeStructureChanged(e);
+            }
         }
     }
 
@@ -198,7 +179,7 @@ public class NavigationTreeModel implements javax.swing.tree.TreeModel,ch.ehi.um
   	// nodeChanged(node);
   }
 
-  private List getChildren(Object parent){
+  private List<Element> getChildren(Object parent){
     List ret=new java.util.ArrayList();
     Iterator iterator;
 
@@ -304,7 +285,6 @@ public class NavigationTreeModel implements javax.swing.tree.TreeModel,ch.ehi.um
     }
   }
   /** adapts MetaModelChanges to TreeModelEvents.
-   * @see also getChildren() for a similar structure
    */
   @Override
   public void metaModelChanged(ch.ehi.uml1_4.changepropagation.MetaModelChange event) {
@@ -312,23 +292,22 @@ public class NavigationTreeModel implements javax.swing.tree.TreeModel,ch.ehi.um
     String ops=event.getOperation();
     if(source instanceof Class){
       if(source instanceof Association){
-        // roles
+        // RoleDefs owned by source
         if(isAttribute(ops,"Connection")){
             if (!ops.startsWith(MetaModelChange.OP_CLEAR) /*PH: prevents closing tree after AssocDef removal*/) {
                 fireTreeStructureChanged((ModelElement)source);
             }
         }
       }
-      // attributes
+      // attributes owned by source 
       if(isAttribute(ops,"Feature")){
         fireTreeStructureChanged((ModelElement)source);
       }
-      // associations
+      // associations where source is an end
       if(isAttribute(ops,"Association")){
           if (!ops.startsWith(MetaModelChange.OP_CLEAR) /*PH: prevents closing tree after ClassDef removal (if associated)*/) {
             fireTreeStructureChanged((ModelElement)source);
           }
-        //   track name changes in AssociationEnd events
       }
       // ParameterDefs
       if(source instanceof ch.ehi.interlis.modeltopicclass.ClassDef){
@@ -416,12 +395,7 @@ public class NavigationTreeModel implements javax.swing.tree.TreeModel,ch.ehi.um
   }
 
   public TreePath getTreePath(Element node){
-    return findElementDefinitionNode(node);
-  }
-  public TreePath findElementDefinitionNode(Element node){
-    // RoleDef's are represented by multiple nodes. This function returns their
-    // definition
-    java.util.ArrayList path = new java.util.ArrayList();
+    java.util.ArrayList<Element> path = new java.util.ArrayList<Element>();
     path.add(node);
     Namespace next=getParent(node);
     if(next!=null){
@@ -430,6 +404,10 @@ public class NavigationTreeModel implements javax.swing.tree.TreeModel,ch.ehi.um
         next=next.getNamespace();
         path.add(0,next);
       }
+    }
+    if(path.get(0)!=rootElement) {
+        // node is no longer part of this tree model
+        return null;
     }
     return new TreePath(path.toArray());
   }
@@ -456,114 +434,4 @@ public class NavigationTreeModel implements javax.swing.tree.TreeModel,ch.ehi.um
     fireTreeStructureChanged(rootElement);
   }
 
-/**
- * Update the given TreeNode to display the changedElement in NavigationTree.
- * @param node (Node in tree whose Element has changed)
- * @param changedElement (Element value of node)
- * @see EditorTreeModel#valueForPathChanged(TreePath, Object)
- */
-/*
-private synchronized void updateNode(MutableTreeNode node, Element changedElement) {
-	//	Rename should be done by UI-refresh automatically
-	if (getTreNavigation().getSelectionPath() != null) {
-Tracer.getInstance().patch(this, "updateNode(..)", "Bug fix: forces redraw after renaming");
-		getTreNavigation().expandPath(getTreNavigation().getSelectionPath());
-		getTreNavigation().repaint();
-	}
-
-	if (changedElement instanceof Namespace) {
-		// update ModelElement children as well
-		//  -> build list of all elementChildren-Types displayed as TreeNode
-		java.util.ArrayList elementChildren = getNonOwnedChildren(changedElement);
-		java.util.Iterator iterator = ((Namespace)changedElement).iteratorOwnedElement();
-		while (iterator.hasNext()) {
-			elementChildren.add(iterator.next());
-		}
-
-		updateChildren(node, elementChildren);
-	} else {
-		Tracer.getInstance().nyi(this, "updateNode(..)", "changedElements not of type Namespace are not updated yet");//$NON-NLS-2$//$NON-NLS-1$
-	}
-}
-*/
-/**
- * Check whether an elementChild was inserted (ADD) oder deleted (REMOVE) in the model and
- * refresh their displayment.
- * IMPORTANT:
- * - The list of elementChildren might contain unchanged, new or deleted siblings at once.
- *
- * @param parentNode (Node in tree whoose children might have changed)
- * @param elementChildren (list containing 0..n Element's changed or unchanged)
- */
- /*
-private void updateChildren(MutableTreeNode parentNode, java.util.ArrayList elementChildren) {
-	// build a map where nodeChild-Index points to elementChild
-	java.util.HashMap parentNodeChildren = new java.util.HashMap(parentNode.getChildCount());
-	for (int i=0; i<parentNode.getChildCount(); i++) {
-		parentNodeChildren.put(new Integer(i), null);
-	}
-
-	// try find an elementChild in each displayed TreeNode
-	java.util.Iterator iterator = elementChildren.iterator();
-	while (iterator.hasNext()) {
-		Element elementChild = (Element)iterator.next();
-		boolean found = false;
-		for (int i=0; i<parentNode.getChildCount(); i++) {
-			Element childNode = ((NavigationTreeNode)parentNode.getChildAt(i)).getElement();
-			if (childNode.equals(elementChild)) {
-				parentNodeChildren.put(new Integer(i), elementChild);
-				found = true;
-				break;				// for efficiency reasons
-			}
-		}
-		if (!found) {
-			// case NEW child -> display additional node
-			insertNode(parentNode, new NavigationTreeNode(elementChild));
-			getTreNavigation().repaint();
-			// newly inserted nodes must not be compared for deletion (s. below)
-		}
-	}
-
-	// try search deleted elements
-	for (int i=0; i<parentNodeChildren.size(); i++) {
-		if (parentNodeChildren.get(new Integer(i)) == null) {
-			// case DELETED child -> remove displaying node
-			getTreeModel().removeNodeFromParent((MutableTreeNode)parentNode.getChildAt(i));
-			getTreNavigation().repaint();
-		}
-	}
-}
-*/
-/**
- * Wrap the the given ModelElement into an ElementMapper to
- * represent as NavigationTree.
- * The ModelElement's parent-child dependency is already considered
- * in the given namespace.
- *
- * This is a recursive BuildTree Algorithm.
- * @param namespace (Model to add to parent)
- * @param parent (given parent-Node)
- */
- /*
-private void walkTree(Namespace namespace, MutableTreeNode parent) {
-	MutableTreeNode currentNode = null;
-
-	// child model-Element
-	currentNode = insertNode(parent, new NavigationTreeNode(namespace));
-	updateChildren(currentNode, getNonOwnedChildren(namespace));
-
-	// treat the ModelElement's
-	java.util.Iterator iterator = namespace.iteratorOwnedElement();
-	while (iterator.hasNext()) {
-		ModelElement modelElement = (ModelElement)iterator.next();
-		if (modelElement instanceof Namespace) {
-			// package might contain subtree
-			walkTree((Namespace)modelElement, currentNode);
-		} else {
-			// add leaf
-			insertNode(currentNode,	new NavigationTreeNode(modelElement));
-		}
-	}
-}
-*/
 }
