@@ -1,5 +1,6 @@
 LATEST 
 ----------------------------------
+- avoid collapse of navigation tree on element removal (#31)
 
 UML-Editor 3.7.3 (2020-05-04) 
 ----------------------------------
